Fix my bots scrollbar colour

--- a/packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
+++ b/packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
@@ -205,5 +205,5 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #ccc !important;
+  background: var(--webkit-scrollbar-thumb-color) !important;
 }
