--- a/packages/app/client/src/ui/styles/themes/dark.css
+++ b/packages/app/client/src/ui/styles/themes/dark.css
@@ -221,6 +221,7 @@ html {
   --my-bots-entry-color: var(--neutral-3);
   --my-bots-path-color: var(--neutral--3);
   --my-bots-scrollbar-color: rgba(136,136,136,0.5);
+  --webkit-scrollbar-thumb-color: rgba(136,136,136,0.5);
 
   /* Status Bar */
   --status-bar-bg: #007ACC;
